Updated services to use latest addressing service. Also added new Reference-Data Info endpoint.